// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill renders with custom color 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
}

.css-2,
[data-css-2] {
  background-color: #e84c3d;
  display: inline-block;
  border-radius: 10px;
  padding: 2px 15px;
  cursor: default;
}

<div
  data-css-2=""
  data-css-0=""
>
  <div
    data-css-0=""
    data-css-1=""
  >
    Important message
  </div>
</div>
`;

exports[`Pill renders without error 1`] = `
.css-0,
[data-css-0] {
  background-color: #3598db;
  display: inline-block;
  border-radius: 10px;
  padding: 2px 15px;
  cursor: default;
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-2,
[data-css-2] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-weight: 600;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #ffffff;
}

<div
  data-css-1=""
  data-css-0=""
>
  <div
    data-css-1=""
    data-css-2=""
  >
    Important message
  </div>
</div>
`;
